# storyteller

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/storyteller/: __init__.py  __main__.py  cli.py  config.py  model.py  utils.py
storyteller/: __init__.py  __main__.py  config.py  model.py  utils.py
