[tool.poetry]
name = "storyteller-core"
version = "0.0.3"
description = "Multimodal AI Story Teller, built with Stable Diffusion, GPT, and neural text-to-speech"
authors = ["Jaesung Tae <jaesungtae@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "storyteller", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
nltk = "^3.8.1"
soundfile = "^0.11.0"
tts = "^0.10.1"
diffusers = "^0.11.1"
transformers = "^4.25.1"
pre-commit = {version = "^2.21.0", extras = ["dev"]}

[tool.poetry.scripts]
storyteller = "storyteller.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
